--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_USER=surbhikirar8983@gmail.com
 SMTP_PASS=lobvbarhptvushdu
+DB_URL=mongodb://127.0.0.1:27017
